--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -196,7 +196,7 @@
 
       <!-- need to fix modal to get pop up window to load; also check button callback fcn -->
 
-      <div id="resultsModal" class="modal fade" role="dialog">
+      <div id="resultsModal" class="modal" role="dialog">
         <div class="modal-dialog">
           <div class="modal-content">
             <div class="modal-header">
